--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "start": "serve -s dist",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -18,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
+    "serve": "^14.2.5",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
