--- a/apps/api/nixpacks.toml
+++ b/apps/api/nixpacks.toml
@@ -15,5 +15,5 @@ cmds = [
 ]
 
 [start]
-cmd = 'cd /app/apps/api && npx prisma migrate deploy && pnpm start'
+cmd = 'cd /app/apps/api && npx prisma generate && npx prisma migrate deploy && pnpm start'
 
