Update Railway start command to specify application directory
- Modified the start command in `railway.toml` to change the working directory to `/app/apps/client` before executing the serve command. This ensures the application serves from the correct path during deployment.

--- a/apps/client/railway.toml
+++ b/apps/client/railway.toml
@@ -2,7 +2,7 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "npx serve -s dist -l $PORT"
+startCommand = "cd /app/apps/client && npx serve -s dist -l $PORT"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
